--- a/TestSimplePipe/TestSimplePipe.vcxproj
+++ b/TestSimplePipe/TestSimplePipe.vcxproj
@@ -167,6 +167,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestSimplePipe.cpp" />
+    <ClCompile Include="TestSimplePipeReceiver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
