--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -50,7 +50,7 @@ jobs:
       #id: run_vstest
       #working-directory: ${{env.GITHUB_WORKSPACE}}
       #run: vstest.console.exe /TestCaseFilter:"Priority!=2" /Platform:x64 .\x64\Release\TestSimplePipe.dll
-      uses: microsoft-approved-actions/vstest@master
+      uses: microsoft/vstest-action@v1.0.0
       with:
           testAssembly: TestSimplePipe.dll
           searchFolder: .\x64\Release\
