--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -47,7 +47,13 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
       
     - name: Run VSTest
-      id: run_vstest
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: vstest.console.exe /TestCaseFilter:"Priority!=2" /Platform:x64 .\x64\Release\TestSimplePipe.dll
-      
+      #id: run_vstest
+      #working-directory: ${{env.GITHUB_WORKSPACE}}
+      #run: vstest.console.exe /TestCaseFilter:"Priority!=2" /Platform:x64 .\x64\Release\TestSimplePipe.dll
+      uses: microsoft/vstest-action@v1.0.0
+      with:
+          testAssembly: TestSimplePipe.dll
+          searchFolder: .\x64\Release\
+          testFiltercriteria: Priority!=2
+          runInParallel: true
+          
