--- a/TestSimplePipe/TestSimplePipe.vcxproj.filters
+++ b/TestSimplePipe/TestSimplePipe.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="TestSimplePipeReceiver.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="TestSerialize.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
