--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -31,10 +31,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
-
-    - name: Setup VSTest path
-      uses: darenm/Setup-VSTest@v1
+      uses: microsoft/setup-msbuild@v1.1
 
     - name: Restore NuGet packages
       working-directory: ${{env.GITHUB_WORKSPACE}}
@@ -47,10 +44,7 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
       
     - name: Run VSTest
-      #id: run_vstest
-      #working-directory: ${{env.GITHUB_WORKSPACE}}
-      #run: vstest.console.exe /TestCaseFilter:"Priority!=2" /Platform:x64 .\x64\Release\TestSimplePipe.dll
-      uses: microsoft/vstest-action@v1.0.0
+      uses: microsoft-approved-actions/vstest@master
       with:
           testAssembly: TestSimplePipe.dll
           searchFolder: .\x64\Release\
